--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ a {
 }
 /* NavBar */
 .header {
-    background: url('../img/desktop/image-header.jpg') no-repeat
+    background: url('/img/desktop/image-header.jpg') no-repeat
     center;
     /* position: relative; */
     object-fit: cover;
@@ -70,7 +70,7 @@ a {
     font-family: 'Fraunces', sans-serif;
     font-weight: 900;
     word-spacing: 15px;
-    margin-top: 5rem;
+    margin-top: 10rem;
     letter-spacing: 8px;
 }
 .header #header-content-icon {
@@ -190,7 +190,7 @@ a {
 }
 
 .content3 #img1 {
-   background: url('../img/desktop/image-graphic-design.jpg') no-repeat
+   background: url('/img/desktop/image-graphic-design.jpg') no-repeat
    center center/cover;
    height: 70vh;
    width: 50%;
@@ -199,7 +199,7 @@ a {
 .content3 #img1 h1 {
     color: #28564e;
     font-size: 2.5rem;
-    margin-top: 23rem;
+    margin-top: 25rem;
     font-family: 'Fraunces', sans-serif;
     
 }
@@ -214,7 +214,7 @@ a {
     
 }
 .content3 #img2 {
-    background: url('../img/desktop/image-photography.jpg') no-repeat
+    background: url('/img/desktop/image-photography.jpg') no-repeat
     center center/cover;
     height: 70vh;
    width: 50%;
@@ -222,7 +222,7 @@ a {
 }
 .content3 #img2 h1 {
     font-size: 2.5rem;
-    margin-top: 23rem;
+    margin-top: 25rem;
     font-family: 'Fraunces', sans-serif;
     color: #20546e;
 }
@@ -246,12 +246,11 @@ a {
 }
 .tests {
     margin: auto;
-    height: 80vh;
+    height:60vh;
 }
 
 .tests img {
-    /* justify-content: space-evenly; */
-    margin-left: 40%;
+    margin-left: 45%;
     border-radius: 50%;
     width: 5rem;
     height: 5rem;
@@ -477,5 +476,36 @@ a {
 @media only screen and (min-width: 650px) {
     .header .dropdown {
         display: none;
+    }
+}
+@media only screen and  (min-width: 1440px) {
+    .header .header-content {
+        text-align: center;
+        font-size: 30px;
+        font-family: 'Fraunces', sans-serif;
+        font-weight: 900;
+        word-spacing: 15px;
+        margin-top: 15rem;
+        letter-spacing: 8px;
+    }
+    .header #header-content-icon {
+        margin-top: 10rem;
+    }
+    .content3 #img2 h1 {
+        margin-top: 35rem;
+    }
+    .content3 #img2 p {
+        margin: 5rem 9rem;
+        font-size: 20px;
+    }
+    .content3 #img1 h1 {
+        font-size: 2.5rem;
+        margin-top: 35rem;
+        font-family: 'Fraunces', sans-serif;
+        color: #20546e;
+    }
+    .content3 #img1 p {
+        margin: 5rem 9rem;
+        font-size: 20px;
     }
 }
