--- a/index.css
+++ b/index.css
@@ -478,7 +478,7 @@ a {
         display: none;
     }
 }
-@media only screen and  (min-width: 1440px) {
+/* @media only screen and  (min-width: 1440px) {
     .header .header-content {
         text-align: center;
         font-size: 30px;
@@ -507,5 +507,5 @@ a {
     .content3 #img1 p {
         margin: 5rem 9rem;
         font-size: 20px;
-    }
+    } */
 }
