--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ a {
 }
 /* NavBar */
 .header {
-    background: url('/img/desktop/image-header.jpg') no-repeat
+    background: url('../img/desktop/image-header.jpg') no-repeat
     center;
     /* position: relative; */
     object-fit: cover;
@@ -190,7 +190,7 @@ a {
 }
 
 .content3 #img1 {
-   background: url('/img/desktop/image-graphic-design.jpg') no-repeat
+   background: url('../img/desktop/image-graphic-design.jpg') no-repeat
    center center/cover;
    height: 70vh;
    width: 50%;
@@ -214,7 +214,7 @@ a {
     
 }
 .content3 #img2 {
-    background: url('/img/desktop/image-photography.jpg') no-repeat
+    background: url('../img/desktop/image-photography.jpg') no-repeat
     center center/cover;
     height: 70vh;
    width: 50%;
