--- a/styles/style 2.css
+++ b/styles/style 2.css
@@ -70,11 +70,11 @@ a {
     font-family: 'Fraunces', sans-serif;
     font-weight: 900;
     word-spacing: 15px;
-    margin-top: 8rem;
+    margin-top: 10rem;
     letter-spacing: 8px;
 }
 .header #header-content-icon {
-    margin-top: 4rem;
+    margin-top: 7rem;
 }
 
 
@@ -199,7 +199,7 @@ a {
 .content3 #img1 h1 {
     color: #28564e;
     font-size: 2.5rem;
-    margin-top: 23rem;
+    margin-top: 25rem;
     font-family: 'Fraunces', sans-serif;
     
 }
@@ -222,7 +222,7 @@ a {
 }
 .content3 #img2 h1 {
     font-size: 2.5rem;
-    margin-top: 23rem;
+    margin-top: 25rem;
     font-family: 'Fraunces', sans-serif;
     color: #20546e;
 }
@@ -238,7 +238,7 @@ a {
 .tests #testid{
     text-align: center;
     font-family: 'Fraunces', sans-serif;
-    margin-top: 7rem;
+    margin-top: 10rem;
     text-transform: uppercase;
     color: #a7a8aa;
     word-spacing: 5px;
@@ -246,7 +246,7 @@ a {
 }
 .tests {
     margin: auto;
-    height:70vh;
+    height:60vh;
 }
 
 .tests img {
@@ -421,22 +421,6 @@ a {
     .content3 #img2 {
         width: 100%;
     }
-    .content3 #img1 h1 {
-        font-size: 2.5rem;
-        margin-top: 25rem;
-        font-family: 'Fraunces', sans-serif;
-        
-    }
-    .content3 #img1 p {
-        text-align: center;
-        line-height: 2rem;
-        margin: 20px 4rem;
-        font-size: 18px;
-        font-weight: 600;
-        font-family: 'Barlow', sans-serif;
-        color: #438675;
-        
-    }
     .tests {
         height: 150vh;
         align-content: center;
@@ -491,148 +475,80 @@ a {
         display: none;
     }
 }
-/* @media only screen and  (min-width: 1440px) {
-    .header .header-content {
-        text-align: center;
-        font-size: 30px;
-        font-family: 'Fraunces', sans-serif;
-        font-weight: 900;
-        word-spacing: 15px;
-        margin-top: 15rem;
-        letter-spacing: 8px;
+@media only screen and  (min-width: 360px) {
+    .content1 #text1 {
+        padding: 5rem 3rem;
     }
-    .header #header-content-icon {
-        margin-top: 10rem;
+    .content1 img {
+        width: 100%;
+    } 
+    
+    .content1 #text1 h1 {
+        font-size: 2em;
+        padding-right: 1rem;
     }
-    .content3 #img2 h1 {
-        margin-top: 35rem;
+    .content1 #text1 h2 {
+        padding-top: 3rem;
     }
-    .content3 #img2 p {
-        margin: 5rem 9rem;
-        font-size: 20px;
+    .content1 #text1 p {
+        padding-right: 1rem;
+    }
+    .content2 #text2 {
+        padding: 5rem 3rem;
+    }
+    .content2 img {
+        width: 100%;
+    } 
+    
+    .content2 #text2 h1 {
+        font-size: 2em;
+        padding-right: 1rem;
+    }
+    .content2 #text2 h2 {
+        padding-top: 1rem;
+    }
+    .content2 #text2 p {
+        padding-right: 1rem;
+    }
+    .content3 #img1 {
+       width: 100%;
     }
     .content3 #img1 h1 {
         font-size: 2.5rem;
-        margin-top: 35rem;
+        margin-top: 20rem;
         font-family: 'Fraunces', sans-serif;
-        color: #20546e;
+        
     }
-    .content3 #img1 p {
-        margin: 5rem 9rem;
-        font-size: 20px;
-    } */
-    @media only screen and  (min-width: 360px) and (max-width: 650px) {
-        .header .header-content {
-            margin-top: 4rem;
-            letter-spacing: 8px;
-        }
-        .header #header-content-icon {
-            margin-top: 2rem;
-        }
-        .content1 #text1 {
-            padding: 2em 3rem;
-        }
-        .content1 img {
-            width: 100%;
-        } 
-        
-        .content1 #text1 h1 {
-            font-size: 2em;
-            padding-right: 1rem;
-        }
-        .content1 #text1 h2 {
-            padding-top: 3rem;
-        }
-        .content1 #text1 p {
-            padding-right: 1rem;
-        }
-        .content2 #text2 {
-            padding: 5rem 3rem;
-        }
-        .content2 img {
-            width: 100%;
-        } 
-        
-        .content2 #text2 h1 {
-            font-size: 2em;
-            padding-right: 1rem;
-        }
-        .content2 #text2 h2 {
-            padding-top: 1rem;
-        }
-        .content2 #text2 p {
-            padding-right: 1rem;
-        }
-        .content3 #img1 {
-           width: 100%;
-        }
-        .content3 #img1 h1 {
-            font-size: 2.5rem;
-            margin-top: 23rem;
-            font-family: 'Fraunces', sans-serif;
-            
-        }
-        .content3 #img2 {
-            width: 100%;
-         }
-         .content3 #img2 h1 {
-             font-size: 2.5rem;
-             margin-top: 23rem;
-             font-family: 'Fraunces', sans-serif;
-         }
-         .tests #testid{
-            margin-top: 3rem;
-            word-spacing: 3px;
-            letter-spacing: 2px;
-        }
-        .tests {
-            margin: auto;
-            height:150vh;
-        }
-        
-        .tests img {
-            margin-left: 40%;
-        }
-        .tests .test-content {
-            margin-top: 1rem;
-        }
-        
-        .tests #test-text {
-            margin: 1rem 2rem;
-        }
-        .tests .name {
-            margin-left: 1.5rem;
-        }
-        .images {
-            height: 50vh;
-            width: 100%;
-        }
-        .images img{
-            width: 50%;
-        } 
-          .dropdown {
-            position: relative;
-            display: inline-block;
-          }
-          
-          .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-            z-index: 1;
-          }
-          
-          .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-          }
-          .dropdown-content a:hover {background-color: #ddd;}
-
-        .dropdown:hover .dropdown-content {display: block;}
+    .content3 #img2 {
+        width: 100%;
+     }
+     .content3 #img2 h1 {
+         font-size: 2.5rem;
+         margin-top: 20rem;
+         font-family: 'Fraunces', sans-serif;
+     }
+     .tests #testid{
+        margin-top: 3rem;
+        word-spacing: 3px;
+        letter-spacing: 2px;
     }
-   
-
+    .tests {
+        margin: auto;
+        height:100vh;
+    }
+    
+    .tests img {
+        margin-left: 40%;
+    }
+    .tests .test-content {
+        margin-top: 1rem;
+    }
+    
+    .tests #test-text {
+        margin: 1rem 1rem;
+    }
+    .tests .name {
+        margin-left: 1.5rem;
+    }
+}
+    
